2002-12-08  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Mention that bfd no longer declares a "boolean" type.

2002-12-07  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (process_program_headers): When setting loadaddr, don't
	assume segment size is 4k.  Use p_align instead.
	(loadaddr): Change from int to long.
	(dynamic_addr, dynamic_info, version_info): Likewise.
	(process_dynamic_segment <syminsz>): Likewise.
	(process_dynamic_segment): Adjust print format string.
	(rela_addr, rela_size): Delete.
	(process_relocs): Formatting.

2002-12-05  Jim Wilson  <wilson@redhat.com>

	* configure.in (OBJDUMP_DEFS): Define SKIP_ZEROES as 16 for IA-64.
	* configure: Regenerate.

2002-12-04  Ian Lance Taylor  <ian@airs.com>

	* MAINTAINERS: Change e-mail address back to airs.com.

2002-12-04  Aldy Hernandez  <aldyh@redhat.com>

	* MAINTAINERS: Add self.

2002-11-30  Alan Modra  <amodra@bigpond.net.au>

	* addr2line.c, ar.c, arsup.c, binemul.c, binemul.h, bucomm.c, bucomm.h,
	budbg.h, debug.c, debug.h, dlltool.c, emul_aix.c, ieee.c, nlmconv.c,
	nlmconv.h, nlmheader.y, nm.c, objcopy.c, objdump.c, prdbg.c, rdcoff.c,
	rddbg.c, readelf.c, rename.c, size.c, stabs.c, strings.c,
	unwind-ia64.h, wrstabs.c: Replace boolean with bfd_boolean, true with
	TRUE, false with FALSE.  Simplify comparisons of bfd_boolean vars
	with TRUE/FALSE.  Formatting.

2002-11-29  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c Replace occurrences of Elf32_Internal_* and
	Elf64_Internal_* with Elf_Internal_*.
	(slurp_rel_relocs): Change Elf_Internal_Rel to Elf_Internal_Rela.
	Zero r_addend fields.
	(dump_relocations): Remove relas variable, change Elf_Internal_Rel to
	Elf_Internal_Rela.

2002-11-23  Nick Clifton  <nickc@redhat.com>

	* size.c (usage): Fix typo describing switch for hex format.

2002-11-18  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* testsuite/binutils-all/objcopy.exp: Disable tic4x from test
	* testsuite/binutils-all/objdump.exp: Setup proper values for tic4x
	testcase
